--- a/views/index.jade
+++ b/views/index.jade
@@ -17,6 +17,10 @@ block body
             h4(class="media-heading") 
               a(ng-href='http://twitter.com/{{tweet.user.screen_name}}') {{tweet.user.name}}
             {{tweet.text}}
+            div
+              button(class='btn btn-primary', ng-click='tweet.clicked = !tweet.clicked') More info
+              div(class='info', ng-show='tweet.clicked') Language: {{tweet.lang}}, Retweeted: {{tweet.retweet_count}}
+
 
   script(src='/socket.io/socket.io.js')
   script(src='bower_components/angular/angular.js')
